# petit

./: .isort.cfg  .mailmap  .pre-commit-config.yaml  .releaserc.json  CHANGELOG  COPYING  Makefile  PageName.md  ProjectHome.md  README  Welcome.md  setup.cfg  setup.py
.helper-scripts/: distribute-petit.sh
distribute/: Makefile
distribute/.helper-scripts/: distribute-petit.sh
lt/architecture/: lt-object-model.odg
lt/lib/: syslog.stopwords  words.stopwords
petit/: CHANGELOG  Makefile  README
petit/lib/: README
petit/src/: AUTHORS  README  setup.py
petit/test/: README  test.sh
src/lib/: README
src/man/: petit.1
test/: README  test.sh
test/output/: test01-dgraph.output  test01-hash-fingerprint.output  test01-hgraph.output  test01-mgraph.output  test01-mograph.output  test01-sgraph.output  test01-ygraph.output  test02-hash-fingerprint.output  test02-hgraph.output  test02-mograph.output  test03-daemon.output  test03-dgraph.output  test03-hash-nosample.output  test03-hgraph.output  test03-mgraph.output  test03-mograph.output  test03-sgraph.output  test03-wordcount.output  test03-ygraph.output  test04-dgraph.output  test04-hash-nofilter.output  test04-hash-nosample.output  test04-hash.output  test04-mgraph.output  test04-sgraph.output  test04-ygraph.output  test05-daemon.output  test05-dgraph.output  test05-hash-nofilter.output  test05-hash.output  test05-hgraph.output  test05-mgraph.output  test05-mograph.output  test05-sgraph.output  test05-wordcount.output  test05-ygraph.output  test06-dgraph.output  test06-hash-fingerprint.output  test06-hgraph.output  (+61 more)
(+133 files in other folders)
