[metadata]
version = 2.0.0
name = petitlog
summary = Log analysis tool for syslog, apache and raw log files
long_description= "Log analysis tool"
license = GPL3
classifiers =
	Environment :: Console
	Intended Audience :: Customer Service
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	Intended Audience :: Telecommunications Industry
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Unix Shell
	Topic :: Security
	Topic :: System
	Topic :: Utilities
author = Scott McCarty
author_email = Scott.McCarty@gmail.com
home_page = http://crunchtools.com/petit
package_data={
	'src/lib/fingerprints': ['*.fp'],
	'src/lib/fingerprint_library': ['*.fp'],
	'src/lib/filters': ['*.stopwords'],
	'*': src/bin/petit
   },
include_package_data=True,


[options]
packages = 
	crunchtools
	fingerprints
	fingerprint_library
	filters
package_dir =
    =src/lib

[options.packages.find]
where = src/lib
include = *
# alternatively: `exclude = additional*`


[files]


packages =
	crunchtools

scripts =
	src/bin/petit

documentation = 
	README.rst

[entry_points]

[nosetests]
detailed-errors = 1
with-coverage = 1
cover-package =
cover-erase = 1
verbosity = 2

